Finalizando atualização da API